# call-rust-from-fortran

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: rust.cmake
rust/: Cargo.toml  build.rs
rust/bindings/: rust.f90  rust.h  rust.hpp
rust/src/: lib.rs
src/: hello.cpp  hello.f90  some_module.f90
