[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
strip = true

[profile.rel-with-deb-info]
inherits = "release"
debug = true

[profile.min-size-rel]
inherits = "release"
debug = false
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# This is needed for the build.rs script, remove it if you don't plan
# of having one. See build.rs for more info.
[build-dependencies]
cbindgen = "0.24.5"
