[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

[profile.release]
strip = true

[profile.rel-with-deb-info]
inherits = "release"
debug = true

[profile.min-size-rel]
inherits = "release"
debug = false
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
#cbindgen = { git = "https://github.com/LucaCiucci/cbindgen", version = "0.25.0" }
cbindgen-fortran = { git = "https://github.com/LucaCiucci/cbindgen-fortran" }
#cbindgen = { path = "C:/Users/lucac/Documents/GitHub/cbindgen-fortran" }
